# bol

./: .gitignore  CMakeLists.txt
spec/: sprite_spec.lua
spec/gmath/: vector3_spec.lua
spec/scene/: node_spec.lua  rectangle_shape2d_spec.lua  signal_spec.lua  sprite_spec.lua
src/animodel/: animodel.cpp  animodel.hpp  init.lua  lua_animodel.cpp
src/gmath/: util.lua  vector3.lua
src/scene/: area2d.lua  node.lua  rectangle_shape2d.lua  signal.lua  sprite.lua
